kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: frontend
  name: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.158.160.113.107.nip.io
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - frontend.158.160.113.107.nip.io
    secretName: frontend.158.160.113.107.nip.io
status:
  loadBalancer:
    ingress:
    - ip: 158.160.113.107
